every experiments besides increased_features_complexity done

--- a/run-experiments.ipynb
+++ b/run-experiments.ipynb
@@ -256,22 +256,22 @@
     "        rank_counts[node.rank] += 1\n",
     "    num_classes_hierarchy = [rank_counts['binary'], rank_counts['class'], rank_counts['genus'], rank_counts['species']]\n",
     "\n",
-    "    from models.hierarchical_cnn import HierarchicalCNN\n",
-    "    num_additional_features = 2  # e.g., conf, pred_species\n",
-    "    if ablation in ['yolov8', 'baseline', 'yolov9', 'baseline', 'RT-DETR']:\n",
-    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features)\n",
+    "    # Select the appropriate model based on the ablation\n",
+    "    if ablation in ['yolov8', 'baseline', 'yolov9', 'RT-DETR']:\n",
+    "        from models.hierarchical_cnn import HierarchicalCNN\n",
+    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features=2)\n",
     "    elif ablation == 'remove_features':\n",
     "        from models.ablations.remove_features.hierarchical_cnn import HierarchicalCNN\n",
     "        model = HierarchicalCNN(num_classes_hierarchy)\n",
     "    elif ablation == 'attention_removed':\n",
     "        from models.ablations.attention_removed.hierarchical_cnn import HierarchicalCNN\n",
-    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features)\n",
+    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features=2)\n",
     "    elif ablation == 'decreased_branch_complexity':\n",
     "        from models.ablations.decreased_branch_complexity.hierarchical_cnn import HierarchicalCNN\n",
-    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features)\n",
+    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features=2)\n",
     "    elif ablation == 'increased_features_complexity':\n",
     "        from models.ablations.increased_features_complexity.hierarchical_cnn import HierarchicalCNN\n",
-    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features)\n",
+    "        model = HierarchicalCNN(num_classes_hierarchy, num_additional_features=2)\n",
     "    else:\n",
     "        raise ValueError(f\"Unsupported ablation study: {ablation}\")\n",
     "\n",
@@ -324,7 +324,7 @@
     "\n",
     "# Paths and setup\n",
     "classes_file = 'datasets/EMVSD/EMVSD/classes.txt'\n",
-    "ablations = ['yolov8']\n",
+    "ablations = ['yolov8', 'yolov9', 'RT-DETR', 'attention_removed', 'decreased_branch_complexity', 'increased_features_complexity', 'remove_features']\n",
     "alpha_values = [0, 0.2, 0.5, 0.8, 1]\n",
     "\n",
     "# Run experiments and collect results\n",
