Added hooks for visualisations

--- a/hierarcical-cnn-visualisation.ipynb
+++ b/hierarcical-cnn-visualisation.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# %%\n",
-    "df = pd.read_parquet('datasets/segmented-objects-dataset.parquet')\n",
+    "df = pd.read_parquet('datasets/maskrcnn-segmented-objects-dataset.parquet')\n",
     "\n",
     "# Assuming df is your DataFrame with all data\n",
     "train_val_df, test_df = train_test_split(df, test_size=0.3, random_state=42)"
@@ -82,7 +82,7 @@
     "with open('datasets/ontology.json', 'r') as f:\n",
     "    root = importer.read(f)\n",
     "\n",
-    "classes_file = 'datasets/The Fjord Dataset/fjord/classes.txt'\n",
+    "classes_file = 'datasets/EMVSD/EMVSD/classes.txt'\n",
     "\n",
     "object_names = []\n",
     "with open(classes_file, 'r') as file:\n",
@@ -109,10 +109,9 @@
     "\n",
     "# Example instantiation of the model\n",
     "num_classes_hierarchy = list(rank_counts.values())  # Example: [num_species, num_genus, num_class, num_binary]\n",
-    "num_additional_features = 3  # Assuming 3 additional features: conf, iou, pred_species\n",
-    "\n",
+    "num_additional_features = 2  # Assuming 3 additional features: conf, pred_species\n",
     "model = HierarchicalCNN(num_classes_hierarchy, num_additional_features)\n",
-    "model.load_state_dict(torch.load('datasets/hierarchical-model-weights/weights/best_model_alpha_0.50.pth'))"
+    "model.load_state_dict(torch.load('datasets/MaskRCNN-weights/hierarchical-weights/best_model_alpha_0.50.pth'))"
    ]
   },
   {
@@ -184,7 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9835887403543093"
+       "0.930298719772404"
       ]
      },
      "execution_count": 6,
@@ -217,10 +216,10 @@
     "model.to(device)\n",
     "\n",
     "with torch.no_grad():\n",
-    "    for images, conf, iou, pred_species, species_index, genus_index, class_index, binary_index in test_loader:\n",
-    "        images, conf, iou, pred_species = images.to(device), conf.to(device), iou.to(device), pred_species.to(device)\n",
+    "    for images, conf, pred_species, species_index, genus_index, class_index, binary_index in test_loader:\n",
+    "        images, conf, pred_species = images.to(device), conf.to(device), pred_species.to(device)\n",
     "        \n",
-    "        outputs = model(images, conf, iou, pred_species)\n",
+    "        outputs = model(images, conf, pred_species)\n",
     "        \n",
     "        # Convert model outputs to predictions\n",
     "        for i, output in enumerate(outputs):  # For each hierarchical level\n",
@@ -344,13 +343,12 @@
     "        model.register_hooks()\n",
     "\n",
     "        # Get one random sample from the DataLoader\n",
-    "        for images, conf, iou, pred_species, species_index, genus_index, class_index, binary_index in test_loader:\n",
+    "        for images, conf, pred_species, species_index, genus_index, class_index, binary_index in test_loader:\n",
     "            if species_index[0].item() == idx:\n",
     "                selected_image = images[0].unsqueeze(0).to(device)\n",
     "                selected_conf = conf[0].unsqueeze(0).to(device)\n",
-    "                selected_iou = iou[0].unsqueeze(0).to(device)\n",
     "                selected_pred_species = pred_species[0].unsqueeze(0).to(device)\n",
-    "                _ = model(selected_image, selected_conf, selected_iou, selected_pred_species)\n",
+    "                _ = model(selected_image, selected_conf, selected_pred_species)\n",
     "                break\n",
     "\n",
     "        # Create a directory for the species within the alpha directory if it doesn't exist\n",
@@ -401,7 +399,7 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Define the parameters for the image optimization process\n",
-    "upscaling_steps = 13\n",
+    "upscaling_steps = 10\n",
     "upscaling_factor = 1.2\n",
     "lr = 0.01\n",
     "\n",
@@ -414,7 +412,7 @@
     "os.makedirs('class-activations', exist_ok=True)\n",
     "\n",
     "for alpha in alphas:\n",
-    "    model_path = f'datasets/hierarchical-model-weights/weights/best_model_alpha_{alpha}.pth'\n",
+    "    model_path = f'datasets/MaskRCNN-weights/hierarchical-weights/best_model_alpha_{alpha}.pth'\n",
     "    model.load_state_dict(torch.load(model_path))\n",
     "    model.to(device)\n",
     "    model.eval()\n",
@@ -435,7 +433,7 @@
     "\n",
     "                for iteration in range(30):\n",
     "                    optimizer.zero_grad()\n",
-    "                    outputs = model(image, torch.tensor([0.0], device=device), torch.tensor([0.0], device=device), torch.tensor([0.0], device=device))\n",
+    "                    outputs = model(image, torch.tensor([0.0], device=device), torch.tensor([0.0], device=device))\n",
     "                    target_class_index = class_levels[level_index].index(class_name)\n",
     "                    target_output = outputs[level_index]\n",
     "\n",
@@ -461,7 +459,8 @@
     "            image_np = np.transpose(image_np, (1, 2, 0))\n",
     "            image_np = (image_np - image_np.min()) / (image_np.max() - image_np.min())\n",
     "            image_filename = os.path.join(class_path, f'{class_name.replace(\" \", \"_\")}_alpha_{alpha}.png')\n",
-    "            plt.imsave(image_filename, image_np)"
+    "            plt.imsave(image_filename, image_np)\n",
+    "            torch.cuda.empty_cache()  # Clear cached memory after saving each image"
    ]
   }
  ],
