--- a/run-experiments.ipynb
+++ b/run-experiments.ipynb
@@ -1077,7 +1077,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "fjordvision",
    "language": "python",
    "name": "python3"
   },
